# RustyJson

./: .credo.exs  .gitignore  CHANGELOG.md  README.md  RELEASE.md  checksum-Elixir.RustyJson.exs  mix.exs
.github/workflows/: ci.yml  release.yml  test-build.yml
bench/: bench_structs.ex  memory_bench.exs  stress_bench.exs
config/: config.exs
docs/: ARCHITECTURE.md  BENCHMARKS.md  STREAMING_SPEC.md
lib/: decoder.ex  encode.ex  encoder.ex  exceptions.ex  formatter.ex  fragment.ex  helpers.ex  ordered_object.ex  rustyjson.ex  sigil.ex
lib/compat/: jason.ex
native/rustyjson/: Cargo.toml  README.md
native/rustyjson/benches/: decode_bench.rs  encode_bench.rs
native/rustyjson/fuzz/: Cargo.toml  generate_seeds.sh
native/rustyjson/fuzz/fuzz_targets/: fuzz_decode_escaped_string.rs  fuzz_decode_full_json.rs  fuzz_decode_number.rs  fuzz_decode_parse_number.rs  fuzz_decode_scan_string.rs  fuzz_decode_skip_whitespace.rs  fuzz_decode_structural_index.rs  fuzz_encode_escape.rs
native/rustyjson/src/: compression.rs  decimal.rs  direct_decode.rs  direct_json.rs  lib.rs  nif_binary_writer.rs  simd_utils.rs
test/: decoder_test.exs  decoder_test_module_test.exs  encode_test.exs  encoder_test.exs  formatter_test.exs  helpers_test.exs  jason_compat_test.exs  jason_parity_test.exs  json_test_suite_test.exs  ordered_object_test.exs  regressions_test.exs  safety_test.exs  sigil_test.exs  simd_boundary_test.exs
